[gd_scene load_steps=6 format=1]

[ext_resource path="res://globals/game.gd" type="Script" id=1]
[ext_resource path="res://ui/inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/speech_dialogue_default.tscn" type="PackedScene" id=4]
[ext_resource path="res://globals/speech_dialogue_player.gd" type="Script" id=5]

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="hud_layer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="inventory" parent="hud_layer" instance=ExtResource( 2 )]

visibility/visible = false

[node name="menu" parent="hud_layer" instance=ExtResource( 3 )]

visibility/visible = false

[node name="ui_layer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="speech_dialogue_player" type="ResourcePreloader" parent="."]

resources = [ StringArray( "default" ), [ ExtResource( 4 ) ] ]
script/script = ExtResource( 5 )


